--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,8 +22,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run app test
-        run: echo "No tests yet ...."
+      - name: Run unit test
+        run: npm test
 
       - name: Build Docker image
         run: docker build -t demo-app .
+
+      - name: Run linter
+        run: npm run lint 
+      
+      - name: Generate code coverage
+        run: npm run test -- --coverage
