--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI - Docker Build
+name: CI - Build, Test & Push Docker Image
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  build-and-test:
+  build-test-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,11 +25,17 @@ jobs:
       - name: Run unit test
         run: npm test
 
-      - name: Build Docker image
-        run: docker build -t demo-app .
-
       - name: Run linter
         run: npm run lint 
       
       - name: Generate code coverage
         run: npm run test -- --coverage
+
+      - name: Log into Docker Hub
+        run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{secrets.DOCKER_USERNAME}}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/demo-app:latest .
+
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{secrets.DOCKER_USERNAME}}/demo-app:latest
