--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
 
       - name: Run unit test
-        run: npm test
+        run: npm run test
 
       - name: Run linter
         run: npm run lint 
