Fix: Add correct version of jest-environment-jsdom

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-config-next": "13.5.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^<latest_version>"
+    "jest-environment-jsdom": "^29.6.2"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
