--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
         run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{secrets.DOCKER_USERNAME}}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/demo-app:latest .
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/hexashop:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{secrets.DOCKER_USERNAME}}/demo-app:latest
+        run: docker push ${{secrets.DOCKER_USERNAME}}/hexashop:latest
