--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,12 @@
-name: CI - Build, Test & Push Docker Image
+name: CI/CD to EC2
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
+  deploy:
   build-test-push:
     runs-on: ubuntu-latest
 
@@ -39,3 +39,15 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: docker push ${{secrets.DOCKER_USERNAME}}/hexashop:latest
+
+      - name: Deploy on EC2 
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+        host: ${{secrets.EC2_HOST}}
+        username: ubuntu
+        key: ${{secrets.EC2_SSH_KEY}}
+        port: ${{secrets.EC2_PORT}}
+        script: |
+          docker pull ${{secrets.DOCKER_USERNAME}}/hexashop:latest
+          docker rm  -f hexashop || true
+          docker run -d -p 80:3000 --name hexashop ${{secrets.DOCKER_USERNAME}}/hexashop:latest
