--- a/.github/workflows/delpoy.yaml
+++ b/.github/workflows/delpoy.yaml
@@ -1,21 +1,56 @@
-- name: Set Docker image tag
-  run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+name: CI/CD to EC2
 
-- name: Build Docker image
-  run: docker build --no-cache -t ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }} .
+on:
+  push:
+    branches:
+      - main
 
-- name: Push Docker image to Docker Hub
-  run: docker push ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }}
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-- name: Deploy on EC2 
-  uses: appleboy/ssh-action@v1.0.0
-  with:
-    host: ${{secrets.EC2_HOST}}
-    username: ubuntu
-    key: ${{secrets.EC2_SSH_KEY}}
-    port: ${{secrets.EC2_PORT}}
-    script: |
-      docker stop hexashop || true
-      docker rm hexashop || true
-      docker pull ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }}
-      docker run -d -p 80:3000 --name hexashop ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run unit test
+        run: npm run test
+
+      - name: Run linter
+        run: npm run lint 
+      
+      - name: Generate code coverage
+        run: npm run test -- --coverage
+
+      - name: Log into Docker Hub 
+        run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{secrets.DOCKER_USERNAME}}" --password-stdin
+
+      - name: Set Docker image tag
+        run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
+      - name: Build Docker image
+        run: docker build --no-cache -t ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }} .
+
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }}
+
+      - name: Deploy on EC2 
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{secrets.EC2_HOST}}
+          username: ubuntu
+          key: ${{secrets.EC2_SSH_KEY}}
+          port: ${{secrets.EC2_PORT}}
+          script: |
+            docker stop hexashop || true
+            docker rm hexashop || true
+            docker pull ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }}
+            docker run -d -p 80:3000 --name hexashop ${{secrets.DOCKER_USERNAME}}/hexashop:${{ env.IMAGE_TAG }}
